frontend: fix page overflowing

--- a/frontend/static/app.css
+++ b/frontend/static/app.css
@@ -44,7 +44,6 @@ h2 {
 .container {
     max-width: 720px;
     margin: 0 auto;
-    width: 100%;
 }
 
 .last-container:last-of-type,
